First version of unit tests
