# docs/swagger.yaml
@@ -17,13 +17,13 @@ definitions:
         description: ID созданного пакета
         type: integer
     type: object
-  ChaikaGoods_internal_handler_schemas.AddProductRequest:
+  ChaikaGoods_internal_handler_schemas.CreateProductRequest:
     description: Запрос на добавление продукта
     properties:
       product:
         $ref: '#/definitions/ChaikaGoods_internal_handler_schemas.ProductSchema'
     type: object
-  ChaikaGoods_internal_handler_schemas.AddProductResponse:
+  ChaikaGoods_internal_handler_schemas.CreateProductResponse:
     description: Ответ на запрос на добавление продукта
     properties:
       err:
@@ -262,14 +262,14 @@ paths:
         name: product
         required: true
         schema:
-          $ref: '#/definitions/ChaikaGoods_internal_handler_schemas.AddProductRequest'
+          $ref: '#/definitions/ChaikaGoods_internal_handler_schemas.CreateProductRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ChaikaGoods_internal_handler_schemas.AddProductResponse'
+            $ref: '#/definitions/ChaikaGoods_internal_handler_schemas.CreateProductResponse'
         "400":
           description: Bad Request
           schema:
